# widget-clock-rust

./: .gitignore  Cargo.toml  README.md
src/: app.rs  convolution.rs  main.rs
src/convolutions/: base.rs  fire.rs  mod.rs  time.rs
