[package]
name = "widget-hora-fondo-procedural"
version = "0.1.0"
edition = "2021"

[dependencies]
noise = "0.9.0"
pollster = "0.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
minifb = "0.27.0"
minifb_geometry = "0.1.1"
minifb_fonts = "0.1.3"
rand = "0.8.5"
hsv = "0.1.1"
rayon = "1.10.0"
